<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/repo_item_height_100dp"
    android:layout_marginBottom="@dimen/repo_item_margin_bottom_8dp">

    <TextView
        android:id="@+id/repo_name"
        style="@style/RepoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repo_name_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/repo_name_margin_start_10dp"
        android:layout_marginLeft="@dimen/repo_name_margin_start_10dp"/>

    <TextView
        android:id="@+id/repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/repo_language_placeholder"
        app:layout_constraintStart_toStartOf="@id/repo_name"
        app:layout_constraintTop_toBottomOf="@id/repo_name"
        style="@style/RepoLanguage"/>

    <TextView
        android:id="@+id/repo_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/repo_private_placeholder"
        app:layout_constraintStart_toStartOf="@id/repo_language"
        app:layout_constraintTop_toBottomOf="@id/repo_language"
        style="@style/RepoPrivate"/>

    <TextView
        android:id="@+id/created_at_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at_string"
        app:layout_constraintStart_toStartOf="@id/repo_private"
        app:layout_constraintTop_toBottomOf="@id/repo_private"
        style="@style/RepoCreatedAtString"/>

    <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/created_at_margin_start_5dp"
        android:layout_marginLeft="@dimen/created_at_margin_start_5dp"
        android:hint="@string/created_at_placeholder"
        app:layout_constraintStart_toEndOf="@id/created_at_text"
        app:layout_constraintTop_toBottomOf="@id/repo_private"
        style="@style/RepoCreatedAt"/>

    <TextView
        android:id="@+id/updated_at_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updated_at_string"
        app:layout_constraintStart_toEndOf="@id/created_at"
        app:layout_constraintTop_toBottomOf="@id/repo_private"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/RepoUpdatedAtString"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/updated_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/updated_at_margin_start_5dp"
        android:layout_marginLeft="@dimen/updated_at_margin_start_5dp"
        android:hint="@string/updated_at_placeholder"
        app:layout_constraintStart_toEndOf="@id/updated_at_text"
        app:layout_constraintTop_toBottomOf="@id/repo_private"
        style="@style/RepoUpdatedAt"/>


</androidx.constraintlayout.widget.ConstraintLayout>